# arkui_for_ios

./: AGENTS.md  Ace.h  OAT.xml  README-EN.md  README.en.md  README.md  aa.diff  adapter_ios.diff
capability/: BUILD.gn
capability/bridge/: BUILD.gn  BridgeGCDTaskQueue.h  BridgeGCDTaskQueue.mm  BridgeManagerHolder.h  BridgeManagerHolder.mm  BridgePlugin+internal.h  BridgePlugin+internal.mm  BridgePlugin+jsMessage.h  BridgePlugin+jsMessage.m  BridgePlugin+jsMessage.mm  BridgePlugin.h  BridgePlugin.mm  BridgePluginManager+internal.h  BridgePluginManager+internal.mm  BridgePluginManager.h  BridgePluginManager.mm  BridgeTaskInfo.h  BridgeTaskInfo.mm  BridgeTaskQueue.h  BridgeTaskQueue.mm  BridgeTaskQueueHandler.h  BridgeTaskQueueHandler.mm  MethodData.h  MethodData.mm  ParameterHelper.h  ParameterHelper.mm  ResultValue.h  ResultValue.mm  TaskOption.h  TaskOption.mm  bridge_manager.h  bridge_manager.mm  bridge_receiver.h  buffer_mapping.h
capability/camera/: AceCamera.h  AceCamera.m  AceCameraResoucePlugin.h  AceCameraResoucePlugin.m  AceCameraResoucePlugin.mm
capability/clipboard/: clipboard_impl.cpp  clipboard_impl.h  clipboard_impl.mm  clipboard_proxy_impl.cpp  clipboard_proxy_impl.h  multiType_record_impl.cpp  multiType_record_impl.h  pasteData_impl.cpp  pasteData_impl.h
capability/common/: AceSurfaceCaptureHelper.h  AceSurfaceCaptureHelper.mm
capability/editing/: KeyboardTypeMapper.h  KeyboardTypeMapper.m  LICENSE  iOSTextInputDelegate.h  iOSTxtInputManager.h  iOSTxtInputManager.mm  text_input_client_handler.cpp  text_input_client_handler.h  text_input_connection_impl.h  text_input_connection_impl.mm  text_input_plugin.cpp  text_input_plugin.h
capability/environment/: environment_impl.h  environment_impl.mm  environment_proxy_impl.cpp  environment_proxy_impl.h
capability/font/: font_platform_impl.cpp  font_platform_impl.h  font_platform_proxy_impl.cpp  font_platform_proxy_impl.h  system_font_manager.h  system_font_manager.mm
capability/platformview/: AcePlatformView.h  AcePlatformView.mm  AcePlatformViewDelegate.h  AcePlatformViewPlugin.h  AcePlatformViewPlugin.mm  IPlatformView.h  PlatformViewFactory.h
capability/storage/: storage_impl.h  storage_impl.mm  storage_proxy_impl.cpp  storage_proxy_impl.h
capability/surface/: AceSurfacePlugin.h  AceSurfacePlugin.mm  AceSurfaceView.h  AceSurfaceView.mm  IAceSurface.h
capability/textinput/: textinput_proxy_impl.h
capability/texture/: AceTexture.h  AceTexture.m  AceTexture.mm  AceTextureDelegate.h  AceTextureResourcePlugin.h  AceTextureResourcePlugin.m  AceTextureResourcePlugin.mm  AceXcomponentTextureView.h  AceXcomponentTextureView.mm  RenderViewXcomponent.h  RenderViewXcomponent.mm
capability/vibrator/: audio_haptic_player.h  audio_haptic_player.mm  haptic_vibrator.h  haptic_vibrator.mm  iOSAudioHapticPlayer.h  iOSAudioHapticPlayer.mm  iOSHapticVibrator.h  iOSHapticVibrator.mm  iOSVibratorManager.h  iOSVibratorManager.m  vibrator_impl.h  vibrator_impl.mm  vibrator_proxy_impl.cpp  vibrator_proxy_impl.h
capability/video/: AceVideo.h  AceVideo.m  AceVideo.mm  AceVideoResourcePlugin.h  AceVideoResourcePlugin.m  AceVideoResourcePlugin.mm
capability/web/: AceWeb.h  AceWeb.mm  AceWebBridgeCPP.cpp  AceWebCallbackObjectWrapper.cpp  AceWebCallbackObjectWrapper.h  AceWebControllerBridge.h  AceWebControllerBridge.mm  AceWebControllerOC.h  AceWebControllerOC.mm  AceWebDownloadImpl.cpp  AceWebDownloadImpl.h  AceWebErrorReceiveInfoObject.cpp  AceWebErrorReceiveInfoObject.h  AceWebInfoManager.h  AceWebInfoManager.mm  AceWebMessageExtImpl.cpp  AceWebMessageExtImpl.h  AceWebObject.cpp  AceWebObject.h  AceWebPatternBridge.cpp  AceWebPatternBridge.h  AceWebPatternOCBridge.h  AceWebPatternOCBridge.mm  AceWebResourcePlugin.h  AceWebResourcePlugin.mm  AceWebSchemeHandler.cpp  AceWebSchemeHandler.h  WebMessageChannel.h  WebMessageChannel.mm
dependence/: BUILD.gn
dependence/resmgr/: BUILD.gn
entrance/: Ace.h  AcePlatformPlugin.h  AcePlatformPlugin.mm  AceSurfaceHolder.h  AceSurfaceHolder.mm  AceTextureHolder.h  AceTextureHolder.mm  AceViewController.h  AceViewController.mm  AceViewControllerNG.mm  BUILD.gn  DownloadManager.h  DownloadManager.mm  UINavigationController+StatusBar.h  UINavigationController+StatusBar.mm  WantParams.h  WantParams.mm  WindowView.h  WindowView.mm  ace_application_info_impl.cpp  ace_application_info_impl.h  ace_bridge.h  ace_bridge.mm  ace_container.cpp  ace_container.h  ace_download_bridge.h  ace_download_bridge.mm  ace_platform_plugin.cpp  ace_platform_plugin.h  ace_pointer_data.cc  ace_pointer_data.h  ace_pointer_data_packet.cc  ace_pointer_data_packet.h  ace_resource_register.cpp  ace_resource_register.h  capability_registry.cpp  capability_registry.h  display_info.h  display_info.mm  display_manager_agent.cpp  (+16 more)
entrance/accessibility/: AccessibilityDateParse.h  AccessibilityDateParse.mm  AccessibilityElement.h  AccessibilityElement.mm  AccessibilityNodeInfo.h  AccessibilityNodeInfo.mm  AccessibilityWindowView.h  AccessibilityWindowView.mm  AceAccessibilityBridge.h  AceAccessibilityBridge.mm  BUILD.gn
entrance/interaction/: interaction_impl.cpp  interaction_impl.h
osal/: BUILD.gn  accessibility_event_manager.cpp  accessibility_event_manager.h  accessibility_manager_impl.cpp  accessibility_manager_impl.h  ace_checker.cpp  dir_asset_provider.h  display_info_utils.cpp  display_manager_ios.cpp  display_manager_ios.h  drag_window.cpp  drawable_descriptor_ios.cpp  drawable_descriptor_ios.h  drawing_color_filter_ios.cpp  drawing_color_filter_ios.h  drawing_lattice_ios.cpp  drawing_lattice_ios.h  dynamic_module_helper.mm  event_report.cpp  exception_handler.cpp  fetch_manager.cpp  fetch_manager.h  file_asset_provider.cpp  file_asset_provider.h  frame_trace_adapter_impl.h  high_contrast_observer.cpp  high_contrast_observer.h  hitrace_meter.cpp  http_asset_provider.h  http_constant.h  image_packer_ios.cpp  image_packer_ios.h  image_perf_ios.h  image_source_ios.cpp  image_source_ios.h  input_method_manager_ios.cpp  ios_trace.cpp  log_wrapper.cpp  modal_ui_extension_impl.cpp  mouse_style_ios.cpp  (+29 more)
(+158 files in other folders)
