# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ios/rules.gni")
import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/arkui/ace_engine/adapter/ios/build/config.gni")

common_napi_names = [ 
  "router",
  "mediaquery", 
  # add the napi modules...
] 

target_framework = []
foreach(module, common_napi_names) {
  module_path_names = []
  module_path_names = string_split(module, "/")
  prefix_dir = module_path_names[0]

  module_path = prefix_dir
  if (prefix_dir != module) {
    module_path = module_path_names[1]
  }

  module_name_ext = string_replace(module_path, "_", "")

  module_name = string_replace(module, "_", "")
  module_name = string_replace(module_name, "/", "_")

  lib_name = "lib" + module_name_ext
  ohos_shared_library(module_name) {
    ldflags = [
      "-Wl",
      "-install_name",
      "@rpath/${lib_name}.framework/$lib_name",
    ]
    deps = [ "$ace_root/interfaces/napi/kits/${module_path}:${module_name_ext}_static_ios" ]
    deps += [ "$ace_root/adapter/ios/build:ace_ios" ] #if no this deps of share library,link state will failed.
    part_name = "ace_engine_cross"
    subsystem_name = "arkui"
  }
  
  ohos_combine_darwin_framework(lib_name) {
    deps = [ ":$module_name" ]

   # _export_framework_headers = [ ] # for compile , will be deleted later

    subsystem_name = "arkui"
    part_name = "ace_engine_cross"
  }
  target_framework += [ ":${lib_name}" ]
}

group("ace_napi_frameworks") {
  deps = target_framework
}

